Fixed margins a little as they were a bit too big. Added some parsing to the Google-generated HTML to remove the redirect added to the links and force them to open in a new window.

--- a/public/style.css
+++ b/public/style.css
@@ -69,7 +69,7 @@ main {
   background-color: aliceblue;
   width: 90vw;
   max-width: 896px;
-  padding: 5vw 5vw 12vw 6vw;
+  padding: 2vw 5vw 8vw 6vw;
   box-sizing: border-box;
 }
 
